# nsa-codebreaker-challenge2022

./: .gitignore  README.md  a1.ipynb  a2.ipynb  b1.ipynb  b2.ipynb  pyproject.toml  pysen.toml  task5.ipynb  task6.ipynb  task7.ipynb  task8.ipynb  task9.ipynb
data/a2/root/: .bash_history  .cert.pem
data/b1/: YOUR_FILES_ARE_SAFE.txt
data/b2/: request.py
data/task5/: core  data.dec  data.enc  privatekey.pem
data/task5/openssh-8.6p1/: .gdb_history
data/task7/: admin.html  adminlist.html  cookie  forum.html  home.html  lock.html  unlock.html  userinfo.html
img/: a.sql
