[tool.poetry]
authors = ["tuampon <diohabara@gmail.com>"]
description = ""
name = "nsa-codebreak-challenge2022"
version = "0.1.0"

[tool.poetry.dependencies]
jupyter = "^1.0.0"
pandas = "^1.4.3"
python = "^3.10"
dpkt = "^1.9.8"
libfaketime = "^2.0.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
