[tool.poetry]
authors = ["tuampon <diohabara@gmail.com>"]
description = ""
name = "nsa-codebreak-challenge2022"
version = "0.1.0"

[tool.poetry.dependencies]
jupyter = "^1.0.0"
pandas = "^1.4.3"
python = "^3.10"
dpkt = "^1.9.8"
libfaketime = "^2.0.0"
requests = "^2.28.1"
pyasn1 = "^0.4.8"
gmpy2 = "^2.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "^0.971"
pysen = "^0.10.2"

[tool.poetry.group.dev.dependencies]
setuptools = "^65.6.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
